--- a/lucky/index.html
+++ b/lucky/index.html
@@ -1,20 +1,27 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="contact.html">
+    <link rel="stylesheet" href="gallery.html">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="/photo/8aed1403e00f42417b04e262b38e7f94.jpg" alt="logo_cat">
+ 
     <div class="aboutme">
 <p><i> <b>Hello Olexander</b></i>
 </p>
+
+
 <p>My name is Vitaly and today you can find some information about my little Abissynian Cat</p>
 <p>His name is Lucky</p>
     </div>
-<p>Here you can also check his fresh photos in <a href="/pages/gallery.html"><b>Gallery</b></a></p>
+    <img src="cute.jpg" alt="logo_cat" style="width:100px;height:100px;">
+<p>Here you can also check his fresh photos in <a href="gallery.html"><b>Gallery</b></a></p>
 <p>And if you interested in contacting us please click <b>Contacts</b> button</p>
-<button><a href="/pages/contact.html">Contacts</a></button>
+<button><a href="contact.html">Contacts</a></button>
 </body>
 </html>
