--- a/lucky/contact.html
+++ b/lucky/contact.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style_con.css">
 </head>
 <body>
-<img src="/photo/8aed1403e00f42417b04e262b38e7f94.jpg" alt="1">
-<img src="/photo/abyssinian-medium-sized-purebreed-cat.jpg" alt="2">
-<img src="/photo/abyssinian.png" alt="3">
+    <div class="cont">
+        <h1>Telephone</h1>
+       <button><p>+38(093)911-97-20</p></button>
+          </div>
+
 </body>
 </html>
